# simpleptgpu

./: CMakeLists.txt  image.hpp  intersection.hpp  main.cu  ray.hpp  rtaa.cu  scene.hpp  sphere.hpp
